Fix circle image width and height on mobile screen

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ form {
   padding: 8px;
 }
 
-.rounded-circle {
+.more .rounded-circle {
   height: 250px;
   width: 250px;
 }
